argocd-apps/ingress.yaml
# argocd-apps/ingress.yaml
# KAAM: HTTP routing — domain name se app access karo
# Abhi NodePort use karo — Ingress optional hai

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop-ingress
  namespace: juice-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-shop-stable
            port:
              number: 3000
